build/build_output_view_tune.txt
[ 14%] Built target shaders_spirv
[ 19%] Building CXX object CMakeFiles/sisterapp.dir/src/core/application.cpp.o
[ 17%] Building CXX object CMakeFiles/sisterapp.dir/main.cpp.o
[ 21%] Building CXX object CMakeFiles/sisterapp.dir/src/ui/minimap.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:189: warning: ignoring ‘#pragma omp parallel’ [-Wunknown-pragmas]
  189 |     #pragma omp parallel for collapse(2)
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp: In member function ‘void ui::Minimap::update(const terrain::TerrainMap&, const terrain::TerrainConfig&)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:147:19: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  147 |     worldWidth_ = mapW * config.resolution;
      |                   ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:148:20: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  148 |     worldHeight_ = mapH * config.resolution;
      |                    ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:193:47: warning: conversion from ‘uint32_t’ {aka ‘unsigned int’} to ‘float’ may change value [-Wconversion]
  193 |             float u = static_cast<float>(x) / textureWidth_;
      |                                               ^~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:194:47: warning: conversion from ‘uint32_t’ {aka ‘unsigned int’} to ‘float’ may change value [-Wconversion]
  194 |             float v = static_cast<float>(y) / textureHeight_;
      |                                               ^~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:202:45: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  202 |             int mapX = static_cast<int>(u * mapW);
      |                                             ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:203:45: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  203 |             int mapZ = static_cast<int>(v * mapH); // v3.8.0 Fix: V=0 is North (Z=0). No inversion.
      |                                             ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:231:19: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  231 |     worldWidth_ = w * config.resolution;
      |                   ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:232:20: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  232 |     worldHeight_ = h * config.resolution;
      |                    ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:252:61: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  252 |                     float globalU = static_cast<float>(x) / w;
      |                                                             ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:253:61: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  253 |                     float globalV = static_cast<float>(z) / h; // v3.8.0 Fix: V aligned with Z
      |                                                             ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp: In member function ‘void ui::Minimap::transitionImageLayout(VkImage, VkFormat, VkImageLayout, VkImageLayout)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/ui/minimap.cpp:394:61: warning: unused parameter ‘format’ [-Wunused-parameter]
  394 | void Minimap::transitionImageLayout(VkImage image, VkFormat format, VkImageLayout oldLayout, VkImageLayout newLayout) {
      |                                                    ~~~~~~~~~^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp: In member function ‘void core::Application::init()’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:175:17: error: ‘class graphics::Camera’ has no member named ‘setPitch’
  175 |         camera_.setPitch(-15.0f); // Look down slightly to see more terrain
      |                 ^~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp: In member function ‘void core::Application::processEvents(double)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:454:91: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  454 |                          float flux = finiteMap_->fluxMap()[hitZ * finiteMap_->getWidth() + hitX];
      |                                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:455:97: warning: conversion to ‘std::vector<int>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  455 |                          int basinID = finiteMap_->watershedMap()[hitZ * finiteMap_->getWidth() + hitX];
      |                                                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
make[2]: *** [CMakeFiles/sisterapp.dir/build.make:205: CMakeFiles/sisterapp.dir/src/core/application.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
